lib/parser/Parser.cpp
/*
 * Parser of the Oberon LLVM compiler.
 *
 * Created by Michael Grossniklaus on 2/2/18.
 */

#include "Parser.h"

#include <iostream>
#include <memory>
#include <set>
#include <string>
#include <vector>

#include "scanner/IdentToken.h"
#include "scanner/LiteralToken.h"

using std::make_unique;
using std::unique_ptr;
using std::vector;

static OperatorType token_to_operator(TokenType token);

void Parser::parse(ASTContext *context) {
    module(context);
}

// ident = letter { letter | digit } .
unique_ptr<Ident> Parser::ident() {
    const auto token = scanner_.peek();
    if (assertToken(token, TokenType::const_ident)) {
        token_ = scanner_.next();
        const auto ident = dynamic_cast<const IdentToken*>(token_.get());
        logger_.debug(to_string(*ident));
        return make_unique<Ident>(ident->start(), ident->end(), ident->value());
    }
    // [<END>, <ELSE>, <ELSIF>, <THEN>, <UNTIL>, <BY>, <DO>, <TO>, <OF>, <MOD>, <DIV>, <OR>,
    // <<=>, <<>, <=>, <#>, <>=>, <>>, <+>, <->, <*>, <&>, <:=>, <[>, <]>, <(>, <)>, <;>, <,>, <:>, <.>]
    resync({ TokenType::kw_end, TokenType::kw_else, TokenType::kw_elsif, TokenType::kw_then,
             TokenType::kw_until, TokenType::kw_by, TokenType::kw_do, TokenType::kw_to,
             TokenType::op_mod, TokenType::op_div, TokenType::op_or, TokenType::op_leq, TokenType::op_lt,
             TokenType::op_eq, TokenType::op_neq, TokenType::op_gt, TokenType::op_geq,
             TokenType::op_plus, TokenType::op_minus, TokenType::op_times, TokenType::op_and, TokenType::op_becomes,
             TokenType::rbrack, TokenType::lbrack, TokenType::rparen, TokenType::lparen,
             TokenType::semicolon, TokenType::colon, TokenType::comma, TokenType::period });
    return make_unique<Ident>(token->start(), token->end(), to_string(TokenType::undef));
}

// qualident = [ ident "." ] ident .
unique_ptr<QualIdent> Parser::qualident() {
    logger_.debug("qualident");
    const auto qualifier = ident();
    if (!sema_.isDefined(qualifier.get()) && scanner_.peek()->type() == TokenType::period) {
        scanner_.next();  // skip the period
        if (assertToken(scanner_.peek(), TokenType::const_ident)) {
            const auto identifier = ident();
            return make_unique<QualIdent>(qualifier->start(), identifier->end(), qualifier->name(), identifier->name());
        }
    }
    return make_unique<QualIdent>(qualifier->start(), qualifier->end(), qualifier->name());
}

// identdef = ident [ "*" ] .
unique_ptr<IdentDef> Parser::identdef(const bool checkAlphaNum) {
    logger_.debug("identdef");
    const auto identifier = ident();
    if (checkAlphaNum) {
        assertOberonIdent(identifier.get());
    }
    auto exp = false;
    if (scanner_.peek()->type() == TokenType::op_times) {
        scanner_.next();  // skip the asterisk
        exp = true;
    }
    return make_unique<IdentDef>(identifier->start(), identifier->end(), identifier->name(), exp);
}

// ident_list = identdef { "," identdef } .
void Parser::ident_list(vector<unique_ptr<IdentDef>> &idents) {
    logger_.debug("ident_list");
    while (true) {
        auto token = scanner_.peek();
        if (token->type() == TokenType::const_ident) {
            idents.push_back(identdef());
        } else {
            logger_.error(token->start(), "identifier expected.");
            break;
        }
        token = scanner_.peek();
        if (token->type() == TokenType::comma) {
            scanner_.next(); // skip comma
        } else if (token->type() == TokenType::const_ident) {
            logger_.error(token->start(), "comma missing.");
        } else if (token->type() == TokenType::colon) {
            break;
        } else {
            logger_.error(token->start(), "unexpected token: " + to_string(token->type()) + ".");
            // [<:>]
            resync({ TokenType::colon });
            break;
        }
    }
}

// module = "MODULE" ident ";" [ import_list ] declarations [ "BEGIN" statement_sequence ] "END" ident "." .
void Parser::module(ASTContext *context) {
    logger_.debug("module");
    token_ = scanner_.next();
    if (!assertToken(token_.get(), TokenType::kw_module)) {
        resync({TokenType::eof});   // [<EOF>]
    }
    const auto start = token_->start();
    auto identifier = ident();
    sema_.onTranslationUnitStart(start, identifier->end(), identifier);
    context->setTranslationUnit(sema_.onModuleStart(start, std::move(identifier)));
    const auto module = context->getTranslationUnit();
    token_ = scanner_.next();
    if (!assertToken(token_.get(), TokenType::semicolon)) {
        // [<IMPORT>, <CONST>, <TYPE>, <VAR>, <PROCEDURE>, <BEGIN>, <END>]
        resync({TokenType::kw_import, TokenType::kw_const, TokenType::kw_type, TokenType::kw_var,
                TokenType::kw_procedure, TokenType::kw_begin, TokenType::kw_end});
    }
    if (scanner_.peek()->type() == TokenType::kw_import) {
        import_list(module->imports());
    }
    declarations(module->constants(), module->types(), module->variables(), module->procedures());
    token_ = scanner_.next();
    if (token_->type() == TokenType::kw_begin) {
        statement_sequence(module->statements());
        token_ = scanner_.next();
    }
    if (!assertToken(token_.get(), TokenType::kw_end)) {
        resync({TokenType::eof});   // [<EOF>]
    }
    identifier = ident();
    token_ = scanner_.next();
    if (!assertToken(token_.get(), TokenType::period)) {
        resync({TokenType::eof});   // [<EOF>]
    }
    sema_.onModuleEnd(token_->end(), identifier);
    sema_.onTranslationUnitEnd(module->getIdentifier()->name());
}

// import_list = IMPORT import { "," import } ";" .
void Parser::import_list(vector<unique_ptr<ImportNode>> &imports) {
    logger_.debug("import_list");
    scanner_.next();  // skip IMPORT keyword
    while (true) {
        import(imports);
        const auto token = scanner_.peek();
        if (token->type() == TokenType::comma) {
            scanner_.next();  // skip comma
        } else if (token->type() == TokenType::const_ident) {
            logger_.error(token->start(), "comma missing.");
        } else if (token->type() == TokenType::semicolon) {
            scanner_.next();  // skip semicolon
            break;
        } else {
            logger_.error(token->start(), to_string(token->type()) + "unexpected.");
            // [<CONST>, <TYPE>, <VAR>, <PROCEDURE>, <BEGIN>]
            resync({ TokenType::kw_const, TokenType::kw_type, TokenType::kw_var, TokenType::kw_procedure, TokenType::kw_begin });
            break;
        }
    }
}

// import = ident [":=" ident] .
void Parser::import(vector<unique_ptr<ImportNode>> &imports) {
    logger_.debug("import");
    const auto token = scanner_.peek();
    if (assertToken(token, TokenType::const_ident)) {
        auto identifier = ident();
        const FilePos start = identifier->start();
        const FilePos end = identifier->end();
        if (scanner_.peek()->type() == TokenType::op_becomes) {
            scanner_.next(); // skip := operator
            if (assertToken(scanner_.peek(), TokenType::const_ident)) {
                auto name = ident();
                imports.push_back(sema_.onImport(start, end, std::move(identifier), std::move(name)));
            }
        } else {
            imports.push_back(sema_.onImport(start, end, nullptr, std::move(identifier)));
        }
    }
}

// TODO declaration_sequence = [ CONST { const_declaration ";" } ]
// TODO                        [ TYPE { type_declaration ";" } ]
// TODO                        [ VAR { variable_declaration ";" } ]
// TODO                        { procedure_declaration ";" } .
// declarations = [ const_declarations ] [ type_declarations ] [ var_declarations ] { procedure_declaration } .

void Parser::declarations(vector<unique_ptr<ConstantDeclarationNode>> & consts,
                          vector<unique_ptr<TypeDeclarationNode>> & types,
                          vector<unique_ptr<VariableDeclarationNode>> & vars,
                          vector<unique_ptr<ProcedureNode>> &procs) {
    logger_.debug("declarations");
    if (scanner_.peek()->type() == TokenType::kw_const) {
        const_declarations(consts);
    }
    expect({ TokenType::kw_type, TokenType::kw_var, TokenType::kw_procedure, TokenType::kw_begin, TokenType::kw_end });

    if (scanner_.peek()->type() == TokenType::kw_type) {
        type_declarations(types);
    }
    expect({ TokenType::kw_var, TokenType::kw_procedure, TokenType::kw_begin, TokenType::kw_end });

    if (scanner_.peek()->type() == TokenType::kw_var) {
        var_declarations(vars);
    }
    expect({ TokenType::kw_procedure, TokenType::kw_begin, TokenType::kw_end });

    while (scanner_.peek()->type() == TokenType::kw_procedure) {
        procedure(procs);
    }
    expect({ TokenType::kw_begin, TokenType::kw_end });
    sema_.onDeclarations();
}

// TODO const_declaration = identdef "=" const_expression .
// TODO const_expression = expression .
// const_declarations = "CONST" { identdef "=" expression ";" } .
void Parser::const_declarations(vector<unique_ptr<ConstantDeclarationNode>> & consts) {
    logger_.debug("const_declarations");
    const FilePos pos = scanner_.next()->start();  // skip CONST keyword and get its position
    while (scanner_.peek()->type() == TokenType::const_ident) {
        FilePos start = scanner_.peek()->start();
        auto ident = identdef();
        auto token = scanner_.next();
        if (assertToken(token.get(), TokenType::op_eq)) {
            auto decl = sema_.onConstant(start, EMPTY_POS, std::move(ident), expression());
            consts.push_back(std::move(decl));
            token = scanner_.next();
            if (token->type() != TokenType::semicolon) {
                logger_.error(token->start(), "; expected, found " + to_string(token->type()) + ".");
            }
        }
    }
    if (consts.empty()) {
        logger_.error(pos, "empty CONST declaration");
    }
}

// type_declarations =  "TYPE" { identdef "=" type ";" } .
void Parser::type_declarations(vector<unique_ptr<TypeDeclarationNode>> &types) {
    logger_.debug("type_declarations");
    FilePos pos = scanner_.next()->start();  // skip TYPE keyword and get its position
    while (scanner_.peek()->type() == TokenType::const_ident) {
        pos = scanner_.peek()->start();
        auto ident = identdef();
        if (assertToken(scanner_.peek(), TokenType::op_eq)) {
            scanner_.next();  // skip equals
            // pointer types get special treatment as they can be recursive
            if (scanner_.peek()->type() == TokenType::kw_pointer) {
                const auto type = sema_.onPointerTypeStart(pos, EMPTY_POS);
                auto decl = sema_.onType(pos, EMPTY_POS, std::move(ident), type);
                pointer_type(type);
                types.push_back(std::move(decl));
            } else {
                const auto node = type();
                auto decl = sema_.onType(pos, EMPTY_POS, std::move(ident), node);
                types.push_back(std::move(decl));
            }
            if (assertToken(scanner_.peek(), TokenType::semicolon)) {
                scanner_.next();  // skip semicolon
            }
        }
    }
    if (types.empty()) {
        logger_.error(pos, "empty TYPE declaration");
    }
}

// type = qualident | array_type | record_type | pointer_type | procedure_type .
TypeNode* Parser::type() {
    logger_.debug("type");
    switch (const auto token = scanner_.peek(); token->type()) {
        case TokenType::const_ident: {
            const FilePos start = token->start();
            const FilePos end = token->end();
            return sema_.onTypeReference(start, end, qualident());
        }
        case TokenType::kw_array:
            return array_type();
        case TokenType::kw_record:
            return record_type();
        case TokenType::kw_pointer: {
            const FilePos start = token->start();
            const FilePos end = token->end();
            const auto type = sema_.onPointerTypeStart(start, end);
            pointer_type(type);
            return type;
        }
        case TokenType::kw_procedure:
            return procedure_type();
        default:
            logger_.error(token->start(), "unexpected token: " + to_string(token->type()) + ".");
            // [<)>, <;>, <END>]
            resync({ TokenType::semicolon, TokenType::rparen, TokenType::kw_end });
            return nullptr;
    }
}

// array_type = "ARRAY" ( expression { "," expression } | Ɛ@<Oberon2> ) "OF" type .
ArrayTypeNode* Parser::array_type() {
    logger_.debug("array_type");
    const FilePos pos = scanner_.next()->start();  // skip ARRAY keyword and get its position
    vector<unique_ptr<ExpressionNode>> indices;
    // check to give an informative error in case dimension expressions are missing
    if (scanner_.peek()->type() != TokenType::kw_of) {
        indices.push_back(expression());
        while (scanner_.peek()->type() == TokenType::comma) {
            scanner_.next(); // skip comma
            indices.push_back(expression());
        }
    }
    if (assertToken(scanner_.peek(), TokenType::kw_of)) {
        scanner_.next(); // skip OF keyword
        return sema_.onArrayType(pos, EMPTY_POS, indices, type());
    }
    // [<)>, <;>, <END>]
    resync({ TokenType::semicolon, TokenType::rparen, TokenType::kw_end });
    return nullptr;
}

// record_type = "RECORD" [ "(" qualident ")" ] [ field_list { ";" field_list } ] END.
RecordTypeNode* Parser::record_type() {
    logger_.debug("record_type");
    const FilePos pos = scanner_.next()->start(); // skip RECORD keyword and get its position
    unique_ptr<QualIdent> base;
    if (scanner_.peek()->type() == TokenType::lparen) {
        scanner_.next(); // skip left parenthesis
        base = qualident();
        if (assertToken(scanner_.peek(), TokenType::rparen)) {
            scanner_.next(); // skip right parenthesis
        }
    }
    vector<unique_ptr<FieldNode>> fields;
    if (scanner_.peek()->type() == TokenType::const_ident) {
        field_list(fields);
        while (scanner_.peek()->type() == TokenType::semicolon) {
            token_ = scanner_.next();  // skip semicolon (and remember token for redundancy warning)
            field_list(fields);
        }
    }
    if (assertToken(scanner_.peek(), TokenType::kw_end)) {
        scanner_.next();  // skip END keyword
    }
    // [<)>, <;>, <END>]
    // resync({ TokenType::semicolon, TokenType::rparen, TokenType::kw_end });
    return sema_.onRecordType(pos, EMPTY_POS, std::move(base), std::move(fields));
}

// field_list = ident_list ":" type .
void Parser::field_list(vector<unique_ptr<FieldNode>> &fields) {
    logger_.debug("field_list");
    const auto next = scanner_.peek();
    if (next->type() == TokenType::const_ident) {
        vector<unique_ptr<IdentDef>> idents;
        ident_list(idents);
        if (!idents.empty()) {
            const auto token = scanner_.next();
            if (assertToken(token.get(), TokenType::colon)) {
                const auto node = type();
                unsigned index = 0;
                for (auto &&ident: idents) {
                    FilePos start = ident->start();
                    FilePos end = ident->end();
                    fields.push_back(sema_.onField(start, end, std::move(ident), node, index++));
                }
            }
        }
    } else if (next->type() == TokenType::kw_end) {
        logger_.warning(token_->start(), "redundant semicolon.");
    } else {
        logger_.error(next->start(), "identifier expected.");
    }
    // [<;>, <END>]
    resync({ TokenType::semicolon, TokenType::kw_end });
}

// pointer_type = "POINTER" "TO" ( type ) .
void Parser::pointer_type(PointerTypeNode* ptr) {
    logger_.debug("pointer_type");
    const FilePos pos = scanner_.next()->start();  // skip POINTER keyword and get its position
    if (assertToken(scanner_.peek(), TokenType::kw_to)) {
        scanner_.next(); // skip TO keyword
        // handle possible forward if next token is a qualident
        if (scanner_.peek()->type() == TokenType::const_ident) {
            sema_.onPointerTypeEnd(pos, EMPTY_POS, ptr, qualident());
        } else {
            sema_.onPointerTypeEnd(pos, EMPTY_POS, ptr, type());
        }
    } else {
        // [<)>, <;>, <END>]
        resync({ TokenType::semicolon, TokenType::rparen, TokenType::kw_end });
    }
}

// procedure_type = "PROCEDURE" [ formal_parameters ] .
ProcedureTypeNode *Parser::procedure_type() {
    logger_.debug("procedure_type");
    const FilePos start = token_->start();
    token_ = scanner_.next();  // skip PROCEDURE keyword
    vector<unique_ptr<ParameterNode>> params;
    bool varargs = false;
    sema_.onBlockStart();
    const auto ret = formal_parameters(params, varargs);
    sema_.onBlockEnd();
    return sema_.onProcedureType(start, token_->end(), std::move(params), varargs, ret);
}

// formal_parameters = "(" [ fp_section { ";" fp_section } ] ")" [":" qualident] .
TypeNode *Parser::formal_parameters(vector<unique_ptr<ParameterNode>> &params, bool &varargs) {
    logger_.debug("formal_parameters");
    TypeNode *ret = nullptr;
    auto token = scanner_.peek();
    if (token->type() == TokenType::lparen) {
        scanner_.next();  // skip left parenthesis
        token = scanner_.peek();
        while (token->type() == TokenType::kw_var ||
               token->type() == TokenType::const_ident ||
               token->type() == TokenType::varargs) {
            fp_section(params, varargs);
            token = scanner_.peek();
            if (token->type() == TokenType::rparen) {
                break;
            }
            if (token->type() == TokenType::semicolon) {
                scanner_.next();  // skip semicolon
                if (varargs) {
                    logger_.error(token->start(), "variadic arguments must be last formal parameter.");
                }
                token = scanner_.peek();
                continue;
            }
            token_ = scanner_.next();
            logger_.error(token_->start(), "; or ) expected, found " + to_string(token_->type()) + ".");
        }
        if (assertToken(token, TokenType::rparen)) {
            scanner_.next();  // skip right parenthesis
        }
        token = scanner_.peek();
        if (token->type() == TokenType::colon) {
            scanner_.next();  // skip colon
            ret = type();
        }
    } else if (token->type() == TokenType::colon) {
        // parse return type
        logger_.warning(token->start(), "function procedures without parameters must specify an empty parameter list.");
        scanner_.next();  // skip colon
        ret = type();
    }
    // [<:>, <;>]
    // resync({ TokenType::colon, TokenType::semicolon });
    return ret;
}

// <O90|O07> fp_section = ( [ "VAR" ] ident { "," ident } ":" ( formal_type@<O90|O07> | type@<O0|Oberon2> ) | "..." ) .
void Parser::fp_section(vector<unique_ptr<ParameterNode>> &params, bool &varargs) {
    logger_.debug("fp_section");
    if (scanner_.peek()->type() == TokenType::varargs) {
        varargs = true;
        const auto token = scanner_.next();  // skip varargs
        if (!config_.hasFlag(Flag::ENABLE_VARARGS)) {
            logger_.error(token->start(), "variadic arguments support disabled [-fenable-varargs].");
        }
    } else {
        bool var = false;
        if (scanner_.peek()->type() == TokenType::kw_var) {
            scanner_.next(); // skip VAR keyword
            var = true;
        }
        vector<unique_ptr<Ident>> idents;
        while(true) {
            idents.push_back(ident());
            const auto token = scanner_. peek();
            if (token->type() == TokenType::comma) {
                scanner_.next(); // skip comma
            } else if (token->type() == TokenType::const_ident) {
                logger_.error(token->start(), "comma missing.");
            } else if (token->type() == TokenType::colon) {
                break;
            } else {
                logger_.error(token->start(), to_string(token->type()) + " unexpected.");
                break;
            }
        }
        const auto token = scanner_.next();
        if (token->type() != TokenType::colon) {
            logger_.error(token->start(), ": expected, found " + to_string(token->type()) + ".");
        }
        const auto std = config_.getLanguageStandard();
        const auto node = std == LanguageStandard::Oberon90 || std == LanguageStandard::Oberon07 ? formal_type() : type();
        unsigned index = 0;
        for (auto &&ident : idents) {
            FilePos start = ident->start();
            FilePos end = ident->end();
            params.push_back(sema_.onParameter(start, end, std::move(ident), node, var, index++));
        }
    }
    // [<;>, <)>]
    // resync({ TokenType::semicolon, TokenType::rparen });
}

// formal_type = { "ARRAY" "OF" } qualident.
TypeNode *Parser::formal_type() {
    logger_.debug("formal_type");
    FilePos start;
    unsigned dims = 0;
    while (scanner_.peek()->type() == TokenType::kw_array) {
        token_ = scanner_.next(); // skip keyword "ARRAY"
        start = token_->start();
        if (assertToken(scanner_.peek(), TokenType::kw_of)) {
            scanner_.next(); // skip keyword "OF"
        }
        ++dims;
    }
    const auto token = scanner_.peek();
    if (token->type() == TokenType::kw_pointer || token->type() == TokenType::kw_record) {
        if (dims > 0) {
            logger_.error(token->start(), "element type of open array cannot be an anonymous record or pointer type.");
        } else {
            logger_.error(token->start(), "formal type cannot be an anonymous record or pointer type.");
        }
    } else if (assertToken(scanner_.peek(), TokenType::const_ident)) {
        const auto ident = qualident();
        if (dims == 0) {
            start = ident->start();
        }
        const FilePos end = ident->end();
        return sema_.onTypeReference(start, end, ident, dims);
    }
    resync({ TokenType::semicolon, TokenType::rparen });
    return nullptr;
}

// var_declarations = "VAR" { ident_list ":" type ";" } .
void Parser::var_declarations(vector<unique_ptr<VariableDeclarationNode>> &vars) {
    logger_.debug("var_declarations");
    const FilePos pos = scanner_.next()->start();  // skip VAR keyword and get its position
    while (scanner_.peek()->type() == TokenType::const_ident) {
        vector<unique_ptr<IdentDef>> idents;
        ident_list(idents);
        if (assertToken(scanner_.peek(), TokenType::colon)) {
            scanner_.next();  // skip colon
            const auto node = type();
            int index = 0;
            for (auto &&ident : idents) {
                FilePos start = ident->start();
                FilePos end = ident->end();
                auto decl = sema_.onVariable(start, end, std::move(ident), node, index++);
                vars.push_back(std::move(decl));
            }
            if (assertToken(scanner_.peek(), TokenType::semicolon)) {
                scanner_.next();  // skip semicolon
            }
        }
    }
    if (vars.empty()) {
        logger_.error(pos, "empty VAR declaration");
    }
}

// procedure = "PROCEDURE ( procedure_declaration | procedure_definition ) ";" .
void Parser::procedure(vector<unique_ptr<ProcedureNode>> &procs) {
    logger_.debug("procedure");
    token_ = scanner_.next();  // skip PROCEDURE keyword
    const FilePos start = token_->start();
    if (scanner_.peek()->type() == TokenType::lbrack) {
        if (!config_.hasFlag(Flag::ENABLE_EXTERN)) {
            logger_.error(start, "external procedure support disabled [-fenable-extern].");
        }
        procedure_declaration(start, procs);
    } else {
        procedure_definition(start, procs);
    }
    if (assertToken(scanner_.peek(), TokenType::semicolon)) {
        scanner_.next();  // skip semicolon
    }
}

// procedure_declaration = "[" string "]" identdef [ formal_parameters ] ";" "EXTERNAL" "[" string "]" .
void Parser::procedure_declaration(const FilePos &start, vector<unique_ptr<ProcedureNode>> &procs) {
    logger_.debug("procedure_declaration");
    scanner_.next();  //  skip left bracket
    if (string conv; assertString(scanner_.peek(), conv)) {
        scanner_.next();
        if (assertToken(scanner_.peek(), TokenType::rbrack)) {
            scanner_.next();  // skip right bracket
            auto ident = identdef();
            // parse formal parameters
            sema_.onBlockStart();
            vector<unique_ptr<ParameterNode>> params;
            bool varargs = false;
            const auto ret = formal_parameters(params, varargs);
            sema_.onBlockEnd();
            const auto type = sema_.onProcedureType(start, token_->end(), std::move(params), varargs, ret);
            if (assertToken(scanner_.peek(), TokenType::semicolon)) {
                scanner_.next();  // skip semicolon
            }
            if (assertToken(scanner_.peek(), TokenType::kw_external)) {
                scanner_.next();  // skip EXTERNAL keyword
            }
            if (assertToken(scanner_.peek(), TokenType::lbrack)) {
                scanner_.next();  // skip left bracket
            }
            if (string name; assertString(scanner_.peek(), name)) {
                scanner_.next();
                if (assertToken(scanner_.peek(), TokenType::rbrack)) {
                    token_ = scanner_.next();
                }
                procs.push_back(sema_.onProcedureDeclaration(start, token_->end(), std::move(ident), type, conv, name));
            }
        }
    }
}

// procedure_definition = identdef [ formal_parameters ] ";" procedure_body ident ";" .
void Parser::procedure_definition(const FilePos &start, vector<unique_ptr<ProcedureNode>> &procs) {
    logger_.debug("procedure_definition");
    const auto proc = sema_.onProcedureDefinitionStart(start, identdef());
    // parse formal parameters
    vector<unique_ptr<ParameterNode>> params;
    bool varargs = false;
    const auto ret = formal_parameters(params, varargs);
    proc->setType(sema_.onProcedureType(start, token_->end(), std::move(params), varargs, ret));
    if (assertToken(scanner_.peek(), TokenType::semicolon)) {
        scanner_.next();  // skip semicolon
    }
    procedure_body(proc);
    procs.push_back(sema_.onProcedureDefinitionEnd(token_->end(), ident()));
    // [<PROCEDURE>, <END>, <BEGIN>]
    // resync({ TokenType::kw_procedure, TokenType::kw_begin, TokenType::kw_end });
}

// TODO procedure_body = declarations [ "BEGIN" statement_sequence ] [ "RETURN" expression ] "END" .
// procedure_body = declarations [ "BEGIN" statement_sequence ] "END" .
void Parser::procedure_body(ProcedureDefinitionNode *proc) {
    logger_.debug("procedure_body");
    declarations(proc->constants(), proc->types(), proc->variables(), proc->procedures());
    const auto token = scanner_.peek();
    if (token->type() == TokenType::kw_end) {
        scanner_.next(); // skip END keyword
    } else if (assertToken(token, TokenType::kw_begin)) {
        scanner_.next(); // skip BEGIN keyword
        statement_sequence(proc->statements());
        if (assertToken(scanner_.peek(), TokenType::kw_end)) {
            token_ = scanner_.next(); // skip END keyword
        } else {
            resync({TokenType::kw_end});
        }
    }
    // [<ident>]
    resync({ TokenType::const_ident });
}

// statement_sequence = statement { ";" statement } .
void Parser::statement_sequence(StatementSequenceNode *statements) {
    logger_.debug("statement_sequence");
    auto token = scanner_.peek();
    // [<UNTIL>, <ELSIF>, <ELSE>, <END>, <|>]
    if (token->type() == TokenType::kw_end || token->type() == TokenType::kw_elsif ||
        token->type() == TokenType::kw_else || token->type() == TokenType::kw_until ||
        token->type() == TokenType::pipe) {
        logger_.warning(token->start(), "empty statement sequence.");
    } else {
        while (true) {
            statements->addStatement(statement());
            auto last = token_->end();
            token = scanner_.peek();
            if (token->type() == TokenType::semicolon) {
                token_ = scanner_.next();  // skip semicolon but keep token for error reporting in `Parser::statement`
                if (scanner_.peek()->type() == TokenType::semicolon) {
                    logger_.warning(token_->start(), "redundant semicolon.");
                }
            } else if (token->type() == TokenType::const_ident ||
                       token->type() == TokenType::kw_if || token->type() == TokenType::kw_case ||
                       token->type() == TokenType::kw_loop || token->type() == TokenType::kw_repeat ||
                       token->type() == TokenType::kw_for || token->type() == TokenType::kw_while ||
                       token->type() == TokenType::kw_exit || token->type() == TokenType::kw_return) {
                logger_.error(last, "semicolon missing.");
            } else if (token->type() == TokenType::kw_end || token->type() == TokenType::kw_elsif ||
                       token->type() == TokenType::kw_else || token->type() == TokenType::kw_until ||
                       token->type() == TokenType::pipe) {
                break;
            } else if (token->type() == TokenType::eof) {
                logger_.error(token->start(), "premature end of file.");
                break;
            } else {
                logger_.error(token->start(), "unexpected token: " + to_string(token->type()) + ".");
                // [<;>] and [<UNTIL>, <ELSIF>, <ELSE>, <END>, <|>]
                resync({ TokenType::semicolon, TokenType::kw_end, TokenType::kw_elsif, TokenType::kw_else,
                    TokenType::kw_until, TokenType::pipe });
            }
        }
    }
    sema_.onStatementSequence(statements);
}
